wrapcco/walkers/CPPParser.py
# Generated from CPP.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CPPParser ( Parser ):

    grammarFileName = "CPP.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'class'", "'void'", "'public'", "'protected'", 
                     "'private'", "'ifndef'", "'define'", "'endif'", "'include'", 
                     "'virtual'", "'override'", "'template'", "'typename'", 
                     "'static'", "'const'", "'bool'", "'char'", "'int'", 
                     "'float'", "'double'", "'long'", "'short'", "'{'", 
                     "'}'", "'('", "')'", "'['", "']'", "'<'", "'>'", "';'", 
                     "':'", "'::'", "','", "'.'", "'#'", "'&'", "'*'", "'~'", 
                     "'='" ]

    symbolicNames = [ "<INVALID>", "Class", "Void", "PublicAccess", "ProtectedAccess", 
                      "PrivateAccess", "Ifndef", "Define", "Endif", "Include", 
                      "Virtual", "Override", "Template", "Typename", "Static", 
                      "Const", "Bool", "Char", "Int", "Float", "Double", 
                      "Long", "Short", "LeftBrace", "RightBrace", "LeftPar", 
                      "RightPar", "LeftBracket", "RightBracket", "LeftChevron", 
                      "RightChevron", "Semi", "Colon", "DoubleColon", "Comma", 
                      "Dot", "Hash", "Ampersand", "Star", "Tilde", "Equal", 
                      "Identifier", "Digit", "Whitespace", "Newline", "BlockComment", 
                      "LineComment" ]

    RULE_program = 0
    RULE_openGuardian = 1
    RULE_closeGuardian = 2
    RULE_programContent = 3
    RULE_includeStatement = 4
    RULE_classDefinition = 5
    RULE_className = 6
    RULE_classDerivation = 7
    RULE_derivedClassName = 8
    RULE_classContent = 9
    RULE_accessSpecifier = 10
    RULE_methodDeclaration = 11
    RULE_templateStatement = 12
    RULE_methodReturnType = 13
    RULE_methodName = 14
    RULE_constructorDeclaration = 15
    RULE_destructorDeclaration = 16
    RULE_functionDefinition = 17
    RULE_functionReturnType = 18
    RULE_parameterType = 19
    RULE_attributeDeclaration = 20
    RULE_returnType = 21
    RULE_undefinedReturnType = 22
    RULE_parameterList = 23
    RULE_parameter = 24
    RULE_array = 25

    ruleNames =  [ "program", "openGuardian", "closeGuardian", "programContent", 
                   "includeStatement", "classDefinition", "className", "classDerivation", 
                   "derivedClassName", "classContent", "accessSpecifier", 
                   "methodDeclaration", "templateStatement", "methodReturnType", 
                   "methodName", "constructorDeclaration", "destructorDeclaration", 
                   "functionDefinition", "functionReturnType", "parameterType", 
                   "attributeDeclaration", "returnType", "undefinedReturnType", 
                   "parameterList", "parameter", "array" ]

    EOF = Token.EOF
    Class=1
    Void=2
    PublicAccess=3
    ProtectedAccess=4
    PrivateAccess=5
    Ifndef=6
    Define=7
    Endif=8
    Include=9
    Virtual=10
    Override=11
    Template=12
    Typename=13
    Static=14
    Const=15
    Bool=16
    Char=17
    Int=18
    Float=19
    Double=20
    Long=21
    Short=22
    LeftBrace=23
    RightBrace=24
    LeftPar=25
    RightPar=26
    LeftBracket=27
    RightBracket=28
    LeftChevron=29
    RightChevron=30
    Semi=31
    Colon=32
    DoubleColon=33
    Comma=34
    Dot=35
    Hash=36
    Ampersand=37
    Star=38
    Tilde=39
    Equal=40
    Identifier=41
    Digit=42
    Whitespace=43
    Newline=44
    BlockComment=45
    LineComment=46

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def openGuardian(self):
            return self.getTypedRuleContext(CPPParser.OpenGuardianContext,0)


        def programContent(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CPPParser.ProgramContentContext)
            else:
                return self.getTypedRuleContext(CPPParser.ProgramContentContext,i)


        def closeGuardian(self):
            return self.getTypedRuleContext(CPPParser.CloseGuardianContext,0)


        def getRuleIndex(self):
            return CPPParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = CPPParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.state = 52
                self.openGuardian()


            self.state = 58
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 55
                    self.programContent() 
                self.state = 60
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

            self.state = 62
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==36:
                self.state = 61
                self.closeGuardian()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OpenGuardianContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Hash(self, i:int=None):
            if i is None:
                return self.getTokens(CPPParser.Hash)
            else:
                return self.getToken(CPPParser.Hash, i)

        def Ifndef(self):
            return self.getToken(CPPParser.Ifndef, 0)

        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(CPPParser.Identifier)
            else:
                return self.getToken(CPPParser.Identifier, i)

        def Define(self):
            return self.getToken(CPPParser.Define, 0)

        def getRuleIndex(self):
            return CPPParser.RULE_openGuardian

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOpenGuardian" ):
                listener.enterOpenGuardian(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOpenGuardian" ):
                listener.exitOpenGuardian(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOpenGuardian" ):
                return visitor.visitOpenGuardian(self)
            else:
                return visitor.visitChildren(self)




    def openGuardian(self):

        localctx = CPPParser.OpenGuardianContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_openGuardian)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.match(CPPParser.Hash)
            self.state = 65
            self.match(CPPParser.Ifndef)
            self.state = 66
            self.match(CPPParser.Identifier)
            self.state = 67
            self.match(CPPParser.Hash)
            self.state = 68
            self.match(CPPParser.Define)
            self.state = 69
            self.match(CPPParser.Identifier)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CloseGuardianContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Hash(self):
            return self.getToken(CPPParser.Hash, 0)

        def Endif(self):
            return self.getToken(CPPParser.Endif, 0)

        def getRuleIndex(self):
            return CPPParser.RULE_closeGuardian

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCloseGuardian" ):
                listener.enterCloseGuardian(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCloseGuardian" ):
                listener.exitCloseGuardian(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCloseGuardian" ):
                return visitor.visitCloseGuardian(self)
            else:
                return visitor.visitChildren(self)




    def closeGuardian(self):

        localctx = CPPParser.CloseGuardianContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_closeGuardian)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(CPPParser.Hash)
            self.state = 72
            self.match(CPPParser.Endif)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramContentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def includeStatement(self):
            return self.getTypedRuleContext(CPPParser.IncludeStatementContext,0)


        def classDefinition(self):
            return self.getTypedRuleContext(CPPParser.ClassDefinitionContext,0)


        def functionDefinition(self):
            return self.getTypedRuleContext(CPPParser.FunctionDefinitionContext,0)


        def getRuleIndex(self):
            return CPPParser.RULE_programContent

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgramContent" ):
                listener.enterProgramContent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgramContent" ):
                listener.exitProgramContent(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgramContent" ):
                return visitor.visitProgramContent(self)
            else:
                return visitor.visitChildren(self)




    def programContent(self):

        localctx = CPPParser.ProgramContentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_programContent)
        try:
            self.state = 77
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [36]:
                self.enterOuterAlt(localctx, 1)
                self.state = 74
                self.includeStatement()
                pass
            elif token in [1]:
                self.enterOuterAlt(localctx, 2)
                self.state = 75
                self.classDefinition()
                pass
            elif token in [2, 14, 15, 16, 17, 18, 19, 20, 21, 22, 41]:
                self.enterOuterAlt(localctx, 3)
                self.state = 76
                self.functionDefinition()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IncludeStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Hash(self):
            return self.getToken(CPPParser.Hash, 0)

        def Include(self):
            return self.getToken(CPPParser.Include, 0)

        def LeftChevron(self):
            return self.getToken(CPPParser.LeftChevron, 0)

        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(CPPParser.Identifier)
            else:
                return self.getToken(CPPParser.Identifier, i)

        def RightChevron(self):
            return self.getToken(CPPParser.RightChevron, 0)

        def DoubleColon(self, i:int=None):
            if i is None:
                return self.getTokens(CPPParser.DoubleColon)
            else:
                return self.getToken(CPPParser.DoubleColon, i)

        def Dot(self):
            return self.getToken(CPPParser.Dot, 0)

        def getRuleIndex(self):
            return CPPParser.RULE_includeStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIncludeStatement" ):
                listener.enterIncludeStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIncludeStatement" ):
                listener.exitIncludeStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIncludeStatement" ):
                return visitor.visitIncludeStatement(self)
            else:
                return visitor.visitChildren(self)




    def includeStatement(self):

        localctx = CPPParser.IncludeStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_includeStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(CPPParser.Hash)
            self.state = 80
            self.match(CPPParser.Include)
            self.state = 81
            self.match(CPPParser.LeftChevron)
            self.state = 82
            self.match(CPPParser.Identifier)
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==33:
                self.state = 83
                self.match(CPPParser.DoubleColon)
                self.state = 84
                self.match(CPPParser.Identifier)
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==35:
                self.state = 90
                self.match(CPPParser.Dot)
                self.state = 91
                self.match(CPPParser.Identifier)


            self.state = 94
            self.match(CPPParser.RightChevron)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Class(self):
            return self.getToken(CPPParser.Class, 0)

        def className(self):
            return self.getTypedRuleContext(CPPParser.ClassNameContext,0)


        def LeftBrace(self):
            return self.getToken(CPPParser.LeftBrace, 0)

        def RightBrace(self):
            return self.getToken(CPPParser.RightBrace, 0)

        def classDerivation(self):
            return self.getTypedRuleContext(CPPParser.ClassDerivationContext,0)


        def classContent(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CPPParser.ClassContentContext)
            else:
                return self.getTypedRuleContext(CPPParser.ClassContentContext,i)


        def Semi(self):
            return self.getToken(CPPParser.Semi, 0)

        def getRuleIndex(self):
            return CPPParser.RULE_classDefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDefinition" ):
                listener.enterClassDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDefinition" ):
                listener.exitClassDefinition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassDefinition" ):
                return visitor.visitClassDefinition(self)
            else:
                return visitor.visitChildren(self)




    def classDefinition(self):

        localctx = CPPParser.ClassDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_classDefinition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(CPPParser.Class)
            self.state = 97
            self.className()
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==32:
                self.state = 98
                self.classDerivation()


            self.state = 101
            self.match(CPPParser.LeftBrace)
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2748787446844) != 0):
                self.state = 102
                self.classContent()
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 108
            self.match(CPPParser.RightBrace)
            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==31:
                self.state = 109
                self.match(CPPParser.Semi)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(CPPParser.Identifier, 0)

        def getRuleIndex(self):
            return CPPParser.RULE_className

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassName" ):
                listener.enterClassName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassName" ):
                listener.exitClassName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassName" ):
                return visitor.visitClassName(self)
            else:
                return visitor.visitChildren(self)




    def className(self):

        localctx = CPPParser.ClassNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_className)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(CPPParser.Identifier)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDerivationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Colon(self):
            return self.getToken(CPPParser.Colon, 0)

        def derivedClassName(self):
            return self.getTypedRuleContext(CPPParser.DerivedClassNameContext,0)


        def PublicAccess(self):
            return self.getToken(CPPParser.PublicAccess, 0)

        def ProtectedAccess(self):
            return self.getToken(CPPParser.ProtectedAccess, 0)

        def PrivateAccess(self):
            return self.getToken(CPPParser.PrivateAccess, 0)

        def getRuleIndex(self):
            return CPPParser.RULE_classDerivation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDerivation" ):
                listener.enterClassDerivation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDerivation" ):
                listener.exitClassDerivation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassDerivation" ):
                return visitor.visitClassDerivation(self)
            else:
                return visitor.visitChildren(self)




    def classDerivation(self):

        localctx = CPPParser.ClassDerivationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_classDerivation)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(CPPParser.Colon)
            self.state = 115
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 56) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 116
            self.derivedClassName()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DerivedClassNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(CPPParser.Identifier, 0)

        def getRuleIndex(self):
            return CPPParser.RULE_derivedClassName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDerivedClassName" ):
                listener.enterDerivedClassName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDerivedClassName" ):
                listener.exitDerivedClassName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDerivedClassName" ):
                return visitor.visitDerivedClassName(self)
            else:
                return visitor.visitChildren(self)




    def derivedClassName(self):

        localctx = CPPParser.DerivedClassNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_derivedClassName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(CPPParser.Identifier)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassContentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def accessSpecifier(self):
            return self.getTypedRuleContext(CPPParser.AccessSpecifierContext,0)


        def attributeDeclaration(self):
            return self.getTypedRuleContext(CPPParser.AttributeDeclarationContext,0)


        def methodDeclaration(self):
            return self.getTypedRuleContext(CPPParser.MethodDeclarationContext,0)


        def constructorDeclaration(self):
            return self.getTypedRuleContext(CPPParser.ConstructorDeclarationContext,0)


        def destructorDeclaration(self):
            return self.getTypedRuleContext(CPPParser.DestructorDeclarationContext,0)


        def Virtual(self):
            return self.getToken(CPPParser.Virtual, 0)

        def getRuleIndex(self):
            return CPPParser.RULE_classContent

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassContent" ):
                listener.enterClassContent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassContent" ):
                listener.exitClassContent(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassContent" ):
                return visitor.visitClassContent(self)
            else:
                return visitor.visitChildren(self)




    def classContent(self):

        localctx = CPPParser.ClassContentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_classContent)
        self._la = 0 # Token type
        try:
            self.state = 130
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 120
                self.accessSpecifier()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 121
                self.attributeDeclaration()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 123
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==10:
                    self.state = 122
                    self.match(CPPParser.Virtual)


                self.state = 128
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
                if la_ == 1:
                    self.state = 125
                    self.methodDeclaration()
                    pass

                elif la_ == 2:
                    self.state = 126
                    self.constructorDeclaration()
                    pass

                elif la_ == 3:
                    self.state = 127
                    self.destructorDeclaration()
                    pass


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AccessSpecifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Colon(self):
            return self.getToken(CPPParser.Colon, 0)

        def PublicAccess(self):
            return self.getToken(CPPParser.PublicAccess, 0)

        def ProtectedAccess(self):
            return self.getToken(CPPParser.ProtectedAccess, 0)

        def PrivateAccess(self):
            return self.getToken(CPPParser.PrivateAccess, 0)

        def getRuleIndex(self):
            return CPPParser.RULE_accessSpecifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAccessSpecifier" ):
                listener.enterAccessSpecifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAccessSpecifier" ):
                listener.exitAccessSpecifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAccessSpecifier" ):
                return visitor.visitAccessSpecifier(self)
            else:
                return visitor.visitChildren(self)




    def accessSpecifier(self):

        localctx = CPPParser.AccessSpecifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_accessSpecifier)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 56) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 133
            self.match(CPPParser.Colon)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def methodReturnType(self):
            return self.getTypedRuleContext(CPPParser.MethodReturnTypeContext,0)


        def methodName(self):
            return self.getTypedRuleContext(CPPParser.MethodNameContext,0)


        def LeftPar(self):
            return self.getToken(CPPParser.LeftPar, 0)

        def RightPar(self):
            return self.getToken(CPPParser.RightPar, 0)

        def Semi(self):
            return self.getToken(CPPParser.Semi, 0)

        def Override(self):
            return self.getToken(CPPParser.Override, 0)

        def templateStatement(self):
            return self.getTypedRuleContext(CPPParser.TemplateStatementContext,0)


        def parameterList(self):
            return self.getTypedRuleContext(CPPParser.ParameterListContext,0)


        def Const(self):
            return self.getToken(CPPParser.Const, 0)

        def Equal(self):
            return self.getToken(CPPParser.Equal, 0)

        def Digit(self):
            return self.getToken(CPPParser.Digit, 0)

        def Identifier(self):
            return self.getToken(CPPParser.Identifier, 0)

        def getRuleIndex(self):
            return CPPParser.RULE_methodDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodDeclaration" ):
                listener.enterMethodDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodDeclaration" ):
                listener.exitMethodDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethodDeclaration" ):
                return visitor.visitMethodDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def methodDeclaration(self):

        localctx = CPPParser.MethodDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_methodDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==12:
                self.state = 135
                self.templateStatement()


            self.state = 138
            self.methodReturnType()
            self.state = 139
            self.methodName()
            self.state = 140
            self.match(CPPParser.LeftPar)
            self.state = 142
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 2199031627780) != 0):
                self.state = 141
                self.parameterList()


            self.state = 144
            self.match(CPPParser.RightPar)
            self.state = 146
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==15:
                self.state = 145
                self.match(CPPParser.Const)


            self.state = 153
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [11]:
                self.state = 148
                self.match(CPPParser.Override)
                pass
            elif token in [31, 40]:
                self.state = 151
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==40:
                    self.state = 149
                    self.match(CPPParser.Equal)
                    self.state = 150
                    _la = self._input.LA(1)
                    if not(_la==41 or _la==42):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                pass
            else:
                raise NoViableAltException(self)

            self.state = 155
            self.match(CPPParser.Semi)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TemplateStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Template(self):
            return self.getToken(CPPParser.Template, 0)

        def LeftChevron(self):
            return self.getToken(CPPParser.LeftChevron, 0)

        def Typename(self):
            return self.getToken(CPPParser.Typename, 0)
